style contact page, style projects

--- a/contact.html
+++ b/contact.html
@@ -26,14 +26,14 @@
         <section class="contact-section">
             <h3>Email: aidanmaycock@gmail.com</h3>
             <h3>Mobile: 07922 480591</h3>
-            <h3>Send me a message</h3>
+            <h2>Send me a message</h2>
             <form action="https://formsubmit.co/7811a141086f034a23b98292b3cfc302" method="POST">
                 <label for="name"></label>
                 <input placeholder="Name" name="name" type="text" id="name" required>
                 <label for="email"></label>
                 <input placeholder="Email" name="email" type="text" id="email" required>
                 <label for="message"></label>
-                <textarea placeholder="Message" name="message" type="text" id="message" required></textarea>
+                <textarea name="message" type="text" id="message" required></textarea>
                 <button type="submit">Send</button>
             </form>
         </section>
