--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     </header>
-    <main>
+    <main class="project-list">
         <h2 class="page-title">My Projects</h2>
         <section class="project-box">
             <section class="links-section">
