--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <section class="links-section">
                 <img draggable=false class="project-image" src="/images/back-end.png"/>
                 <section class="buttons-section">
-                    <a href="https://github.com/Oathian/NC-Games-Backend" class="link-buttons"><img src="/images/github.svg"/></a>
-                    <a href="https://nc-games-aidan.herokuapp.com/api" class="link-buttons"><img src="/images/eye.svg"/></a>
+                    <a href="https://github.com/Oathian/NC-Games-Backend" target="_blank" class="link-buttons"><img src="/images/github.svg"/></a>
+                    <a href="https://nc-games-aidan.herokuapp.com/api" target="_blank" class="link-buttons"><img src="/images/eye.svg"/></a>
                 </section>
             </section>
             <section  class="desc-section">
-                <h3>Backend Project</h3>
-                <p>This was my first project, a restful API built with JavaScript in node, express, PostgresSQL and tested using Jest.</p>
+                <h3>API Project</h3>
+                <p>This was my first project, a restful API built with JavaScript using node, express, PostgresSQL and tested using Jest.</p>
                 <p>The major challenge I faced with this project was with version control as this was the first time I had used the github branches feature. With practice however, I overcame these difficulties and have dealt with merge conflicts better in my later projects.</p>
                 <p>I am pleased with how I handled my SQL database queries and table joins, before the project I would have thought these would have caused the most issues. I am also pleased with the way I wrote the test to check if a review is deleted.</p>
             </section>
@@ -42,15 +42,15 @@
             <section class="links-section">
                 <img draggable=false class="project-image" src="/images/chess.png"/>
                 <section class="buttons-section">
-                    <a href="https://github.com/Oathian/nc-games" class="link-buttons"><img src="/images/github.svg"/></a>
-                    <a href="https://aidans-nc-games.netlify.app/" class="link-buttons"><img src="/images/eye.svg"/></a>
+                    <a href="https://github.com/Oathian/nc-games" target="_blank" class="link-buttons"><img src="/images/github.svg"/></a>
+                    <a href="https://aidans-nc-games.netlify.app/" target="_blank" class="link-buttons"><img src="/images/eye.svg"/></a>
                 </section>
             </section>
             <section  class="desc-section">
-                <h3>Front Project</h3>
+                <h3>Discussion Board Project</h3>
                 <p>This project was a discussion board built in React using HTML, CSS and React hooks.</p>
                 <p>There were a few challenges along the way most of them CSS based. I found it difficult to get the image and colour gradient of the background to work as I wanted though I got the desired result in the end.</p>
-                <p>I really like the spinning loading sign and I think the design of the sorting menu looks neat considering how messy it could have been.</p>
+                <p>I think the spinning loading sign fits well with the theme of the site and I think the design of the sorting menu looks neat considering how messy it could have been.</p>
             </section>
         </section>
     </main>
