--- a/about.html
+++ b/about.html
@@ -22,7 +22,12 @@
         </nav>
     </header>
     <main>
-
+        <h2 class="page-title">About Me</h2>
+        <section class="about-section">
+            <p>I am a maths graduate currently undertaking a full stack skills bootcamp with Northcoders. I love both learning and problem solving, therefore I feel like a career as a software developer will leave me fulfilled.</p>
+            <a href="https://github.com/Oathian" target="_blank" class="text-links"><h3>My Github</h3></a>
+            <a href="https://stackshare.io/oathian/my-stack" target="_blank" class="text-links"><h3>My Skills</h3></a>
+        </section>
     </main>
 </body>
 </html>
