--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
                 <p>I think the spinning loading sign fits well with the theme of the site and I think the design of the sorting menu looks neat considering how messy it could have been.</p>
             </section>
         </section>
+        <section class="project-box">
+            <section class="links-section">
+                <img draggable=false class="project-image" src="/images/sailing.png"/>
+                <section class="buttons-section">
+                    <a href="https://github.com/Oathian/Yacht_appstar" target="_blank" class="link-buttons"><img src="/images/github.svg"/></a>
+                    <a href="" target="_blank" class="link-buttons"><img src="/images/eye.svg"/></a>
+                </section>
+            </section>
+            <section  class="desc-section">
+                <h3>Sailing App Project</h3>
+                <p>An app that tracks sailing experience built in TypeScript in React native with expo. Testing was done in Cypress and Jest, AWS cognito was used for authentication</p>
+                <p>This was a group project built in 8 days with 3 other aspiring junior devs. Using agile practices: morning stand ups with a daily scrum leader, features were broken down into tickets for the Kanban board. Wireframes and component diagrams were drawn up in Figma. A large part of the project was using technologies that were new to all of us so there was a phase of spiking out these new technologies.</p>
+            </section>
+        </section>
     </main>
     <footer>
     </footer>
