--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img draggable=false class="project-image" src="/images/sailing.png"/>
                 <section class="buttons-section">
                     <a href="https://github.com/Oathian/Yacht_appstar" target="_blank" class="link-buttons"><img src="/images/github.svg"/></a>
-                    <a href="video.html" target="_blank" class="link-buttons"><img src="/images/eye.svg"/></a>
+                    <a href="video.html" class="link-buttons"><img src="/images/eye.svg"/></a>
                 </section>
             </section>
             <section  class="desc-section">
