--- a/video.html
+++ b/video.html
@@ -25,7 +25,7 @@
         <h2 class="page-title">Sailing app presentation</h2>
         <section class="video-section">
             <video width="600px" height="400px" controls>
-                <source src="https://media.githubusercontent.com/media/AnnaxT/AnnaxT.github.io/main/images/sailing.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Oathian/oathian.github.io/main/images/sailing.mp4" type="video/mp4">
             </video>
         </section>
     </main>
